BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_IsCompilazione__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsCompilazione__c</fullName>
    <defaultValue>false</defaultValue>
    <description>E&apos; true se il check up è una compilazione.</description>
    <label>Is Compilazione</label>
    <type>Checkbox</type>
</CustomField>