BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_IsPatrimonioAziendale__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsPatrimonioAziendale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Patrimonio Aziendale</label>
    <type>Checkbox</type>
</CustomField>