BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDate_BusinessCreditCard__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_BusinessCreditCard__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Carta di crd aziendale</label>
    <type>DateTime</type>
</CustomField>