BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDate_CaringActivities__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_CaringActivities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Attività di caring ev.</label>
    <type>DateTime</type>
</CustomField>