BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDate_CreditsInsurance__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_CreditsInsurance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Assicurazione crediti</label>
    <type>DateTime</type>
</CustomField>