BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDate_DocumentaryCredits__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_DocumentaryCredits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Crediti Documentari</label>
    <type>DateTime</type>
</CustomField>