BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDate_Leasing__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_Leasing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Leasing/SIFA</label>
    <type>DateTime</type>
</CustomField>