BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDate_OTCExchangeCoverage__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_OTCExchangeCoverage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Copertura OTC Cambi</label>
    <type>DateTime</type>
</CustomField>