BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDate_OtherBnkFundingForm__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_OtherBnkFundingForm__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Altre forme di rac dir</label>
    <type>DateTime</type>
</CustomField>