BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDate_OtherSMOpps__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_OtherSMOpps__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Opportunità altri MDS</label>
    <type>DateTime</type>
</CustomField>