BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDate_SignatureCredit__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_SignatureCredit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Crd firma ItaliaEstero</label>
    <type>DateTime</type>
</CustomField>