BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDate_UnfreezingOfReceiv__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_UnfreezingOfReceiv__c</fullName>
    <description>Data e Ora ultima modifica per Affidamenti di smobilizzo crediti</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Aff. di smobilizzo crd</label>
    <type>DateTime</type>
</CustomField>