BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDate_VarieAssicurativo__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDate_VarieAssicurativo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Varie - Assicurativo</label>
    <type>DateTime</type>
</CustomField>