BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateAltreProposte__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAltreProposte__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Altre Proposte</label>
    <type>DateTime</type>
</CustomField>