BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateAnRisRendPtf__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAnRisRendPtf__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - an. rischio rend. ptf</label>
    <type>DateTime</type>
</CustomField>