BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateAssCasa__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAssCasa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Assicurazione casa</label>
    <type>DateTime</type>
</CustomField>