BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateAssicurativoVita__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAssicurativoVita__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Assicurativo Vita</label>
    <type>DateTime</type>
</CustomField>