BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateAssTCM__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateAssTCM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Assicurazione TCM</label>
    <type>DateTime</type>
</CustomField>