BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateCreditCards__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateCreditCards__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Carte di Credito</label>
    <type>DateTime</type>
</CustomField>