BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateCustomerRetention__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateCustomerRetention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Retention del Cliente</label>
    <type>DateTime</type>
</CustomField>