BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateFinExpiringProducts__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateFinExpiringProducts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Prodotti in scadenza</label>
    <type>DateTime</type>
</CustomField>