BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateFondiSicavTradiz__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateFondiSicavTradiz__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Fondi e Sicav tradiz.</label>
    <type>DateTime</type>
</CustomField>