BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateGestioniDiPTF__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateGestioniDiPTF__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Gestioni di PTF</label>
    <type>DateTime</type>
</CustomField>