BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateLoans__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateLoans__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Prestiti</label>
    <type>DateTime</type>
</CustomField>