BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateMortgage__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateMortgage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Mutui Ipotecari</label>
    <type>DateTime</type>
</CustomField>