BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateNotePianoDAzione__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateNotePianoDAzione__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Note Piano d&apos;azione</label>
    <type>DateTime</type>
</CustomField>