BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateOffertaaDistanza__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateOffertaaDistanza__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Offerta a distanza</label>
    <type>DateTime</type>
</CustomField>