BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDatePIR__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDatePIR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - PIR</label>
    <type>DateTime</type>
</CustomField>