BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateRetirementFund__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateRetirementFund__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - ﻿Fondi Pensione</label>
    <type>DateTime</type>
</CustomField>