BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateSellingProperties__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateSellingProperties__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Vendita imm. in vista</label>
    <type>DateTime</type>
</CustomField>