BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateSocialSecurityChckup__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateSocialSecurityChckup__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Check Up Previdenziale</label>
    <type>DateTime</type>
</CustomField>