BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateSuccessionPlanning__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateSuccessionPlanning__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Pianific. Successoria</label>
    <type>DateTime</type>
</CustomField>