BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateTradingView__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateTradingView__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Trading View</label>
    <type>DateTime</type>
</CustomField>