BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateTransVarious__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateTransVarious__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Varie - Transazionale</label>
    <type>DateTime</type>
</CustomField>