BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LastModifiedDateVarieFinanziario__c.field-meta.xml
<CustomField>
    <fullName>CRM_LastModifiedDateVarieFinanziario__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ultima modifica - Varie - Finanziario</label>
    <type>DateTime</type>
</CustomField>