BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_ListaSezioniModificate__c.field-meta.xml
<CustomField>
    <fullName>CRM_ListaSezioniModificate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lista Sezioni Modificate</label>
    <type>TextArea</type>
</CustomField>