BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_LombardNotes__c.field-meta.xml
<CustomField>
    <fullName>CRM_LombardNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Lombard</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>