BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_MatricolaAutore__c.field-meta.xml
<CustomField>
    <fullName>CRM_MatricolaAutore__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Matricola autore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>