BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_MembroNonCensito__c.field-meta.xml
<CustomField>
    <fullName>CRM_MembroNonCensito__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membro non censito</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Customer_InterviewsBackup</relationshipName>
    <type>Lookup</type>
</CustomField>