BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_MembroNucleo__c.field-meta.xml
<CustomField>
    <fullName>CRM_MembroNucleo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membro del nucleo</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>L&apos;Account selezionato non rispetta i vincoli imposti.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Person Account</value>
        </filterItems>
        <filterItems>
            <field>Account.CRM_NDG__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>TagliandiBackup</relationshipName>
    <type>Lookup</type>
</CustomField>