BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_ModelloDiServizio__c.field-meta.xml
<CustomField>
    <fullName>CRM_ModelloDiServizio__c</fullName>
    <formula>TEXT(CRM_Customer__r.ModelloDiServizio__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Macro-modello di Servizio</label>
    <type>Text</type>
</CustomField>