BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_MovableAssets__c.field-meta.xml
<CustomField>
    <fullName>CRM_MovableAssets__c</fullName>
    <label>Reddito mobiliare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>