BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_NewCustomersAcquisitionNotes__c.field-meta.xml
<CustomField>
    <fullName>CRM_NewCustomersAcquisitionNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Acquisition nuovi Clienti</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>