BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_NomeCognomePF__c.field-meta.xml
<CustomField>
    <fullName>CRM_NomeCognomePF__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome e Cognome - Persona Fisica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>