BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_NomeSocieta1Partecipazioni__c.field-meta.xml
<CustomField>
    <fullName>CRM_NomeSocieta1Partecipazioni__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome Società - 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>