BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_NomeSocieta2Partecipazioni__c.field-meta.xml
<CustomField>
    <fullName>CRM_NomeSocieta2Partecipazioni__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome Società - 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>