BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_NomeSocietaConsuelenteFiscale__c.field-meta.xml
<CustomField>
    <fullName>CRM_NomeSocietaConsuelenteFiscale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome Società - Consulente Fiscale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>