BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_NomeSocietaConsulenteAssicurativo__c.field-meta.xml
<CustomField>
    <fullName>CRM_NomeSocietaConsulenteAssicurativo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome Società - Consulente Assicurativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>