BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_NomeSocietaConsulenteLegale__c.field-meta.xml
<CustomField>
    <fullName>CRM_NomeSocietaConsulenteLegale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome Società - Consulente Legale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>