BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_NomeSocietFamilyOffice__c.field-meta.xml
<CustomField>
    <fullName>CRM_NomeSocietFamilyOffice__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome Società - Family Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>