BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_NomeVeicoloInvestimento__c.field-meta.xml
<CustomField>
    <fullName>CRM_NomeVeicoloInvestimento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome Veicolo Investimento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>