BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_Note_PresentiLuogoIncontro_populated__c.field-meta.xml
<CustomField>
    <fullName>CRM_Note_PresentiLuogoIncontro_populated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Note PresentiLuogoIncontro is populated</label>
    <type>Checkbox</type>
</CustomField>