BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_NotePresentiLuogoIncontro__c.field-meta.xml
<CustomField>
    <fullName>CRM_NotePresentiLuogoIncontro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Presenti e luogo incontro</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>