BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_NotesEsigenzaPrevalente__c.field-meta.xml
<CustomField>
    <fullName>CRM_NotesEsigenzaPrevalente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Esigenza prevalente</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>