BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_NoteSocieta1__c.field-meta.xml
<CustomField>
    <fullName>CRM_NoteSocieta1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Società 1</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>