BPER/DEVF/force-app/main/default/objects/CRM_CustomerInterviewBackup__c/fields/CRM_NoteSocieta3__c.field-meta.xml
<CustomField>
    <fullName>CRM_NoteSocieta3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Note - Società 3</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>